style avoid shrink in badges on overlay card, add horizontal scrollbar on overlay edit for badges

--- a/css/board_card.css
+++ b/css/board_card.css
@@ -150,6 +150,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-shrink: 0;
 }
 
 .card__credential + .card__credential {
